update to latest version

--- a/BibTexDatabase.bib
+++ b/BibTexDatabase.bib
@@ -15714,3 +15714,48 @@ year={2023},
 	note = {DOI: 10.31235/osf.io/rn9xk
 type: article}
 }
+
+@article{zellner1988,
+	title = {Optimal Information Processing and Bayes's Theorem},
+	author = {Zellner, Arnold},
+	year = {1988},
+	date = {1988},
+	journal = {The American Statistician},
+	pages = {278--280},
+	volume = {42},
+	number = {4},
+	doi = {10.2307/2685143},
+	url = {https://www.jstor.org/stable/2685143},
+	note = {Publisher: [American Statistical Association, Taylor & Francis, Ltd.]}
+}
+
+@article{linzer2013,
+	title = {Dynamic Bayesian Forecasting of Presidential Elections in the States},
+	author = {Linzer, Drew A.},
+	year = {2013},
+	month = {03},
+	date = {2013-03-01},
+	journal = {Journal of the American Statistical Association},
+	pages = {124{\textendash}134},
+	volume = {108},
+	number = {501},
+	doi = {10.1080/01621459.2012.737735},
+	url = {https://doi.org/10.1080/01621459.2012.737735},
+	note = {Publisher: Taylor & Francis
+{\_}eprint: https://doi.org/10.1080/01621459.2012.737735}
+}
+
+@article{lock2010,
+	title = {Bayesian Combination of State Polls and Election Forecasts},
+	author = {Lock, Kari and Gelman, Andrew},
+	year = {2010},
+	month = {07},
+	date = {2010-07},
+	journal = {Political Analysis},
+	pages = {337--348},
+	volume = {18},
+	number = {3},
+	doi = {10.1093/pan/mpq002},
+	url = {https://www.cambridge.org/core/journals/political-analysis/article/bayesian-combination-of-state-polls-and-election-forecasts/3E6FD1C1E60B891C8BC733716367FBAF},
+	langid = {en}
+}
