--- a/preamble2.tex
+++ b/preamble2.tex
@@ -3,5 +3,7 @@
 \usepackage{setspace}
 \doublespacing
 \usepackage{caption}
+\usepackage{floatrow}
+\floatsetup[figure]{capposition=top}
 %\renewcommand{\thefigure}{\Alph{figure}.\arabic{figure}}
 %\renewcommand\thesection{\Alph{section}}
