--- a/kubinec_model_SI.Rmd
+++ b/kubinec_model_SI.Rmd
@@ -1,6 +1,6 @@
 ---
-title: "Supplementary Information for Mediation Analysis of Partisanship and Policies on COVID-19 Infections via Bayesian Latent Variable Modeling"
-date: "April 1st, 2022"
+title: "Supplementary Information for A Bayesian Latent Variable Model for the Optimal Identification of Disease Incidence Rates Given Information Constraints"
+date: "April 5th, 2024"
 output: 
   bookdown::pdf_document2:
     includes: 
@@ -71,6 +71,10 @@ The Stan code used to fit the model in the paper is as follows:
 // Robert Kubinec and Luiz Carvalho
 // New York University Abu Dhabi & Getulio Vargas Foundation
 // January 5, 2021
+// variable type controls type of sampling:
+// 1 = priors only
+// 2 = priors + informative info on location of infections from seroprevalence/experts
+// 3 = priors + informative info + likelihood (full model)
 functions {
   
 
@@ -95,14 +99,13 @@ functions {
                    int num_country,
                    int num_rows,
                    vector mu_poly,
-                   vector sigma_poly,
-                   vector poly1,
-                   vector poly2,
-                   vector poly3,
-                   real[] alpha_test,
+                   //vector sigma_poly,
+                   //vector poly1,
+                   //vector poly2,
+                   //vector poly3,
+                   real alpha_test,
                    real alpha_infect,
                    matrix count_outbreak,
-                   real world_infect,
                    vector month_cases,
                    vector suppress_effect_raw,
                    vector lockdown_effect_raw,
@@ -115,14 +118,16 @@ functions {
                    real pcr_spec,
                    real finding,
                    real test_baseline,
-                   //real test_lin_counter,
                    vector country_test_raw,
                    int S,
                    int G,
                    int L,
                    int R,
+                   int RE,
                    int[] sero_row,
+                   int[] sero_row_real,
                    int[,] sero,
+                   matrix sero_real,
                    matrix mobility,
                    vector[] mob_array,
                    vector mob_alpha_const,
@@ -130,22 +135,17 @@ functions {
                    vector[] suppress_med_raw,
                    vector suppress_med_raw_fear,
                    vector lockdown_med_raw_fear,
-                   real[] sigma_test_raw,
+                   real sigma_test_raw,
                    vector country_test_raw2,
-                   vector country_test_raw3,
-                   //real test_lin_counter2,
-                   //real test_max_par,
-                   //vector test_max,
                    matrix lin_counter,
-                   real[] mu_test_raw,
-                   real[] mu_test_raw2,
-                   real[] mu_test_raw3,
-                   real[] sigma_test_raw2,
-                   real[] sigma_test_raw3,
+                   real mu_test_raw,
+                   real mu_test_raw2,
+                   real sigma_test_raw2,
                    matrix M_Sigma,
                    vector fear,
                    real fear_const,
-                   real sigma_fear) {
+                   real sigma_fear,
+                   int type) {
                      
     // big loop over states
     real log_prob = 0;
@@ -158,48 +158,42 @@ functions {
         vector[end2 - start2 + 1] prop_infected; // modeled infection rates for domestic transmission\
         
         int obs = end2 - start2 + 1;
-        real poly_nonc1; // non-centered poly parameters
-        real poly_nonc2; // non-centered poly parameters
-        real poly_nonc3; // non-centered poly parameters
+        //real poly_nonc1; // non-centered poly parameters
+        //real poly_nonc2; // non-centered poly parameters
+        //real poly_nonc3; // non-centered poly parameters
         real country1s;
         real country2s;
         real country3s;
-        real mu_infect;
-        real sd_infect;
         
         vector[end2 - start2 + 1] prop_success;
-        vector[end2 - start2 + 1] prop_fail;
         vector[end2 - start2 + 1] mu_cases;
         vector[end2 - start2 + 1] mu_tests;
         vector[G] mu_mob[end2 - start2 + 1];
         
-        poly_nonc1 = mu_poly[1] + sigma_poly[1]*poly1[s];
-        poly_nonc2 = mu_poly[2] + sigma_poly[2]*poly2[s];
-        poly_nonc3 = mu_poly[3] + sigma_poly[3]*poly3[s];
+        //poly_nonc1 = mu_poly[1] + sigma_poly[1]*poly1[s];
+        //poly_nonc2 = mu_poly[2] + sigma_poly[2]*poly2[s];
+        //poly_nonc3 = mu_poly[3] + sigma_poly[3]*poly3[s];
         
-        country1s = mu_test_raw[1] + sigma_test_raw[1]*country_test_raw[s];
-        country2s = mu_test_raw2[1] + sigma_test_raw2[1]*country_test_raw2[s];
-        country3s = mu_test_raw3[1] + sigma_test_raw3[1]*country_test_raw3[s];
-            
+        country1s = mu_test_raw + sigma_test_raw*country_test_raw[s];
+        country2s = mu_test_raw2 + sigma_test_raw2*country_test_raw2[s];
+        
         // latent infection rate (unobserved), on the logit scale (untransformed)
         // constrained to *always* increase
         
         for(i in 1:obs) {
               if(i==1) {
                 prop_infected[1] = alpha_infect + 
-                count_outbreak[start2,1] * poly_nonc1 +
-                  count_outbreak[start2,2] * poly_nonc2 +
-                    count_outbreak[start2,3] * poly_nonc3 +
-                    world_infect*month_cases[start2] +
+                count_outbreak[start2+i-1,1] * mu_poly[1]  +
+                  count_outbreak[start2+i-1,2] *mu_poly[2] +
+                    count_outbreak[start2+i-1,3] * mu_poly[3] +
                     Q_supp[start2,1:S]*suppress_effect_raw +
                     Q_lock[start2,1:L]*lockdown_effect_raw +
                     Q_mob[start2,1:G]*mob_effect_raw;
               } else {
                 prop_infected[i] = exp(alpha_infect + 
-                count_outbreak[start2+i-1,1] * poly_nonc1  +
-                  count_outbreak[start2+i-1,2] *poly_nonc2 +
-                    count_outbreak[start2+i-1,3] * poly_nonc3 +
-                    world_infect*month_cases[start2+i-1] +
+                count_outbreak[start2+i-1,1] * mu_poly[1]  +
+                  count_outbreak[start2+i-1,2] *mu_poly[2] +
+                    count_outbreak[start2+i-1,3] * mu_poly[3] +
                     Q_supp[start2+i-1,1:S]*suppress_effect_raw +
                     Q_lock[start2+i-1,1:L]*lockdown_effect_raw +
                     Q_mob[start2+i-1,1:G]*mob_effect_raw) + prop_infected[i - 1];
@@ -207,24 +201,22 @@ functions {
         }
               
             //need a recursive function to transform to ordered vector
-            
-
-              
-        mu_infect = mean(prop_infected);
-        sd_infect = sd(prop_infected);
         
         prop_success = prop_infected; 
-        prop_fail = 1 - inv_logit(prop_infected);
         
-        mu_cases = inv_logit(pcr_spec + finding*prop_success);
         
+        if(type==3) {
+          
+          mu_cases = inv_logit(pcr_spec + finding*prop_success);
+          
+        }
+
         log_prob += normal_lpdf(country_test_raw[s]|0,1); // more likely near the middle than the ends
         log_prob += normal_lpdf(country_test_raw2[s]|0,1); // more likely near the middle than the ends
-        log_prob += normal_lpdf(country_test_raw3[s]|0,1);
         
-        log_prob += normal_lpdf(poly1[s]|0,1);
-        log_prob += normal_lpdf(poly2[s]|0,1);
-        log_prob += normal_lpdf(poly3[s]|0,1);
+        //log_prob += normal_lpdf(poly1[s]|0,1);
+        //log_prob += normal_lpdf(poly2[s]|0,1);
+        //log_prob += normal_lpdf(poly3[s]|0,1);
         
         //mobility mediation
 
@@ -240,37 +232,49 @@ functions {
           log_prob += normal_lpdf(fear[start2:end2]|fear_const + Q_lock[start2:end2,1:L]*lockdown_med_raw_fear +
                                 Q_supp2[start2:end2,1:(S-1)]*suppress_med_raw_fear,sigma_fear);
 
-        
-          mu_tests = inv_logit(alpha_test[1] + 
+        if(type==3) {
+          
+          mu_tests = inv_logit(alpha_test + 
                           country1s * lin_counter[start2:end2,1] +
                           country2s * lin_counter[start2:end2,2] +
-                          //country3s * lin_counter[start2:end2,3] +
                           test_baseline * prop_success);
+          
+        }
         
         // observed data model
         // loop over serology surveys to add informative prior information
-        
+
         for(n in start2:end2) {
           
           int q = r_in(n,sero_row);
+          int p = r_in(n, sero_row_real);
           
-          if(q <= 0) {
-            
-            log_prob += beta_binomial_lpmf(cases[n]|country_pop[n],mu_cases[n-start2+1]*phi[1],(1-mu_cases[n-start2+1])*phi[1]);
-            log_prob += beta_binomial_lpmf(tests[n]|country_pop[n],mu_tests[n-start2+1]*phi[2],(1-mu_tests[n-start2+1])*phi[2]);
+          if(q <= 0 && p <= 0 && type==3) {
 
-          } else if(q > 0) {
+            log_prob += beta_binomial_lpmf(cases[n]|country_pop[n],mu_cases[n-start2+1]*phi[2],(1-mu_cases[n-start2+1])*phi[2]);
+            log_prob += beta_binomial_lpmf(tests[n]|country_pop[n],mu_tests[n-start2+1]*phi[1],(1-mu_tests[n-start2+1])*phi[1]);
+
+          } else if(p>0 && (type==2 || type==3)) {
+            
+            // expert survey data
+            // beta prior
+            
+            log_prob += beta_proportion_lpdf(sero_real[p,1]|inv_logit(prop_infected[n-start2+1]),sero_real[p,2]);
+            
+            } else if(q > 0 && (type==2 || type==3)) {
             
             // scaling function. we use seroprevalance data to 
             // set a ground truth for the relationship between covariates and
             // infections measured non-parametrically
-            
-            log_prob += binomial_lpmf(sero[q,1]|sero[q,2],inv_logit(prop_infected[n-start2+1]));
+
+            log_prob += binomial_lpmf(sero[q,1]|sero[q,2],
+                                      inv_logit(prop_infected[n-start2+1]));
             
           }
         }
         
       }
+      
       return log_prob;
     }
     
@@ -287,6 +291,8 @@ data {
   int G; // google mobility data (by type of mobility)
   int L; // just lockdown data (for hierarchical predictor)
   int R; // number of seroprevalence essays
+  int RE; // number of expert surveys
+  int type; // whether to sample from priors or from the full likelihood
   matrix[num_rows,S] suppress; // time-varying suppression measures
   matrix[num_rows,S-1] suppress2; // without COVID poll
   matrix[num_rows,G] mobility; // time-varying mobility measures
@@ -297,6 +303,8 @@ data {
   vector[num_rows] test_max;
   int sero[R,2]; // sero-prevalence datas
   int sero_row[R];
+  matrix[RE,2] sero_real; // expert survey datas
+  int sero_row_real[RE];
   int country_pop[num_rows];
   matrix[num_rows,3] lin_counter;
   vector[2] phi_scale; // prior on how much change there could be in infection rate over time
@@ -347,40 +355,31 @@ transformed data {
   
 }
 parameters {
-  vector[num_country] poly1; // polinomial function of time
-  vector[num_country] poly2; // polinomial function of time
-  vector[num_country] poly3; // polinomial function of time
-  real mu_test_raw[1];
+  // real poly1; // polinomial function of time
+  // real poly2; // polinomial function of time
+  // real poly3; // polinomial function of time
+  real mu_test_raw;
+  real mu_test_raw2;
   real finding; // difficulty of identifying infected cases 
-  //vector<lower=0,upper=1>[R] survey_prop; // variable that stores survey proportions from CDC data
-  real<lower=0> world_infect; // infection rate based on number of travelers
   vector[S] suppress_effect_raw; // suppression effect of govt. measures, cannot increase virus transmission rate
   vector[L] lockdown_effect_raw;
   vector[L] lockdown_med_raw[G];
   vector[S] suppress_med_raw[G];
   vector[L] lockdown_med_raw_fear;
   vector[S-1] suppress_med_raw_fear;
-  //real test_lin_counter;
   real test_baseline;
-  //real test_lin_counter2;
-  real mu_test_raw2[1];
-  real mu_test_raw3[1];
-  real pcr_spec; // anticipated 1 - specificity of RT-PCR tests (taken from literature)
-  // constraint equal to upper limit spec of 98 percent, 2% FPR of PCR test results
+  real pcr_spec; 
   vector[3] mu_poly; // hierarchical mean for poly coefficients
   vector[G] mob_effect_raw;
-  //real test_max_par;
-  vector<lower=0>[3] sigma_poly; // varying sigma polys
+  //vector<lower=0>[3] sigma_poly; // varying sigma polys
   vector[G] mob_alpha_const; // mobility hierarchical intercepts
   vector[num_country] country_test_raw; // unobserved rate at which countries are willing to test vs. number of infected
   vector[num_country] country_test_raw2;
-  vector[num_country] country_test_raw3;
   real alpha_infect; // other intercepts
-  real alpha_test[1];
+  real alpha_test;
   vector<lower=0>[2] phi_raw; // shape parameter for infected
-  real<lower=0> sigma_test_raw[1]; // estimate of between-state testing heterogeneity
-  real<lower=0> sigma_test_raw2[1];
-  real<lower=0> sigma_test_raw3[1];
+  real<lower=0> sigma_test_raw; // estimate of between-state testing heterogeneity
+  real<lower=0> sigma_test_raw2;
   cholesky_factor_corr[G] M_Omega; // these are for the MVN for mobility data
   vector<lower=0>[G] M_sigma;
   real fear_const;
@@ -395,32 +394,26 @@ model {
   matrix[G, G] M_Sigma;
   int grainsize = 1;
   
-  sigma_poly ~ exponential(1);
-  mu_poly ~ normal(0,30);
-  mu_test_raw ~ normal(0,20);
-  
-  mu_test_raw2 ~ normal(0,20);
-  mu_test_raw3 ~ normal(0,20);
-  world_infect ~ normal(0,3);
+  //sigma_poly ~ exponential(100);
+  mu_poly ~ normal(0,50);
+  mu_test_raw ~ normal(0,50);
+  mu_test_raw2 ~ normal(0,50);
+
   lockdown_effect_raw ~ normal(0,5);
   alpha_infect ~ normal(0,10); // this can reach extremely low values
-  alpha_test ~ normal(0,20);
+  alpha_test ~ normal(0,5);
 
-  phi_raw ~ exponential(1);
+  phi_raw ~ exponential(.1);
   mob_effect_raw ~ normal(0,5);
   suppress_effect_raw ~ normal(0,5);
-  //test_max_par ~ normal(0,5);
-  test_baseline ~ normal(0,20);
-  //test_lin_counter ~ normal(0,20);
-  //test_lin_counter2 ~ normal(0,20);
+  test_baseline ~ normal(0,5);
   
   mob_alpha_const ~ normal(0,5);
-  pcr_spec ~ normal(0,20);
+  pcr_spec ~ normal(0,5);
   
-  finding ~ normal(0,20);
-  sigma_test_raw ~ exponential(1);
-  sigma_test_raw2 ~ exponential(1);
-  sigma_test_raw3 ~ exponential(1);
+  finding ~ normal(0,5);
+  sigma_test_raw ~ exponential(100);
+  sigma_test_raw2 ~ exponential(100);
   sigma_fear ~ exponential(.1);
   fear_const ~ normal(0,5);
   
@@ -433,7 +426,7 @@ model {
   lockdown_med_raw_fear ~ normal(0,5);
   
   M_Omega ~ lkj_corr_cholesky(4);
-  M_sigma ~ cauchy(0, 2.5);
+  M_sigma ~ exponential(.1);
   
   M_Sigma = diag_pre_multiply(M_sigma, M_Omega); // Cholesky decomp for MVN for mobility
 
@@ -446,14 +439,13 @@ target += reduce_sum_static(partial_sum, states,
                      num_country,
                      num_rows,
                      mu_poly,
-                     sigma_poly,
-                     poly1,
-                     poly2,
-                     poly3,
+                     //sigma_poly,
+                     //poly1,
+                     //poly2,
+                     //poly3,
                      alpha_test,
                      alpha_infect,
                      count_outbreak,
-                     world_infect,
                      month_cases,
                      suppress_effect_raw,
                      lockdown_effect_raw,
@@ -466,14 +458,16 @@ target += reduce_sum_static(partial_sum, states,
                      pcr_spec,
                      finding,
                      test_baseline,
-                     //test_lin_counter,
                      country_test_raw,
                      S,
                      G,
                      L,
                      R,
+                     RE,
                      sero_row,
+                     sero_row_real,
                      sero,
+                     sero_real,
                      mobility,
                      mob_array,
                      mob_alpha_const,
@@ -483,20 +477,15 @@ target += reduce_sum_static(partial_sum, states,
                      lockdown_med_raw_fear,
                      sigma_test_raw,
                      country_test_raw2,
-                     country_test_raw3,
-                     //test_lin_counter2,
-                     //test_max_par,
-                     //test_max,
                      lin_counter,
                      mu_test_raw,
                      mu_test_raw2,
-                     mu_test_raw3,
                      sigma_test_raw2,
-                     sigma_test_raw3,
                      M_Sigma,
                      fear,
                      fear_const,
-                     sigma_fear);
+                     sigma_fear,
+                     type);
 
 }
 generated quantities {
@@ -527,29 +516,24 @@ generated quantities {
     
   
   for(s in 1:num_country) {
-    
-        real poly_nonc1; // non-centered poly parameters
-        real poly_nonc2; // non-centered poly parameters
-        real poly_nonc3; // non-centered poly parameters
+        // 
+        // real poly_nonc1; // non-centered poly parameters
+        // real poly_nonc2; // non-centered poly parameters
+        // real poly_nonc3; // non-centered poly parameters
         
         int start2 = states[s,2];
         int end2 = states[s,3];
         int obs = end2 - start2 + 1;
         
-        poly_nonc1 = mu_poly[1] + sigma_poly[1]*poly1[s];
-        poly_nonc2 = mu_poly[2] + sigma_poly[2]*poly2[s];
-        poly_nonc3 = mu_poly[3] + sigma_poly[3]*poly3[s];
-        
-        //poly_nonc1 = poly1[1];
-        //poly_nonc2 = poly2[2];
-        //poly_nonc3 = poly3[3];
+        // poly_nonc1 = mu_poly[1] + sigma_poly[1]*poly1[s];
+        // poly_nonc2 = mu_poly[2] + sigma_poly[2]*poly2[s];
+        // poly_nonc3 = mu_poly[3] + sigma_poly[3]*poly3[s];
     
     for(i in 1:obs) {
               if(i==1) {
-                prop_infect_out[start2] = alpha_infect + count_outbreak[start2,1] * poly_nonc1 +
-                    count_outbreak[start2,2] * poly_nonc2  +
-                    count_outbreak[start2,3] * poly_nonc3  +
-                    world_infect*month_cases[start2] +
+                prop_infect_out[start2] = alpha_infect + count_outbreak[start2,1] * mu_poly[1] +
+                    count_outbreak[start2,2] * mu_poly[2]  +
+                    count_outbreak[start2,3] * mu_poly[3]  +
                     Q_supp[start2,1:S]*suppress_effect_raw +
                     Q_lock[start2,1:L]*lockdown_effect_raw +
                     Q_mob[start2,1:G]*mob_effect_raw;
@@ -557,10 +541,9 @@ generated quantities {
                  cov_out[start2] = alpha_infect + Q_mob[start2,1:G]*mob_effect_raw;
                     
               } else {
-                prop_infect_out[start2 + i - 1] = exp(alpha_infect + count_outbreak[start2+i-1,1] * poly_nonc1  +
-                    count_outbreak[start2+i-1,2] * poly_nonc2 +
-                    count_outbreak[start2+i-1,3] * poly_nonc3 +
-                    world_infect*month_cases[start2+i-1] +
+                prop_infect_out[start2 + i - 1] = exp(alpha_infect + count_outbreak[start2+i-1,1] * mu_poly[1] +
+                    count_outbreak[start2+i-1,2] * mu_poly[2] +
+                    count_outbreak[start2+i-1,3] * mu_poly[3] +
                     Q_supp[start2+i-1,1:S]*suppress_effect_raw +
                     Q_lock[start2+i-1,1:L]*lockdown_effect_raw +
                     Q_mob[start2+i-1,1:G]*mob_effect_raw) + prop_infect_out[start2 + i - 2];
